# zephyr

./: west.yml
boards/arm/adi_sdp_k1/: adi_sdp_k1_defconfig
modules/: Kconfig
modules/libiio/: CMakeLists.txt  Kconfig
samples/drivers/iiod/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/drivers/iiod/src/: main.c
